# Sentinel-2A-Segmentation

./: .gitignore  README.md  data_pipeline.py  experiment.py  ml_pipeline.py  ml_pipeline1.ipynb  pyproject.toml  requirements.txt
config/: data_pipeline.yml  data_pipeline_fix.yml  experiments.yml  ml_pipeline.yml  ml_pipeline_baseline.yml  ml_pipeline_unet.yml
data_acquisition/: MapProjections(1).ipynb  MapProjections.ipynb  download_sentinelHub.py  pipeline.py  sentinel_hub_image_downloader.py
data_acquisition/archive/: download_satelliteImages.py  utils.py
notebooks/: ml_pipeline.ipynb  task1.ipynb  task2.ipynb
src/data_acquisition/: constants.py  osm.py  sentinel_hub_image_downloader.py
src/data_processing/: constants.py  patches.py  utils.py
src/ml/: constants.py  dataset.py  run.py  trainer.py  utils.py
src/ml/data/: dataset.py  split.py
src/ml/logs/: logger.py  plots.py
src/ml/loss_functions/: dice.py  hausdorff.py
src/ml/metrics/: dice.py
src/ml/models/: baseline.py  unet.py
