[tool.poetry]
name = "AMLS_Sentinel_Segmentation"
version = "0.1.0"
description = ""
authors = ["Asier Serrano Aramburu <asier.tub@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
rasterio = "^1.3.10"
matplotlib = "^3.9.0"
sentinelhub = "^3.10.2"
python-dotenv = "^1.0.1"
imageio = "^2.34.1"
osmnx = "^1.9.3"
PyYAML = "^6.0.1"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
plotly = "^5.22.0"
kaleido = "0.2.1"
torchvision = "^0.18.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
